--- a/Index/styles.css
+++ b/Index/styles.css
@@ -1,11 +1,25 @@
 .box {
     border: 5px solid black;
-    width: 1487px;
-    height: 540px;
-    
+    width: 1486px;
+    height: 540px; 
 }
 
-.color {
+.cent-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 50%;
+    margin: 0 auto; 
+    text-align: center;
+}
+
+.black {
+    background-color: rgb(0, 0, 0);
+}
+
+.grey {
     background-color: rgb(136, 136, 136);
 }
 
@@ -20,7 +34,7 @@
 
 .container {
     display: flex;
-  }
+}
 
 .text-box2 {
     border: 2px black;
