--- a/Index/styles.css
+++ b/Index/styles.css
@@ -1,7 +1,8 @@
 .box {
-    border: 2px solid black;
+    border: 20px solid black;
     width: 100%;
     height: 540px; 
+    overflow: hidden;
 }
 
 .cent-box {
@@ -20,16 +21,16 @@
 }
 
 .grey {
-    background-color: rgb(136, 136, 136);
+    background-color: rgb(147, 147, 147);
+
 }
 
 .text-box {
     border: 5px solid rgb(27, 39, 255);
     height: 40px;
     width: 450px;
-    margin-left: 521px;
     margin-top: 60px;
-    /* margin-right: 146px; */
+    margin-left: 33.333333%;
 }
 
 .container {
@@ -37,14 +38,14 @@
 }
 
 .text-box2 {
-    border: 2px black;
+    border: 0px rgb(0, 0, 0);
     height: 200px;
     width: 250px;
-    margin-left: 496px;
+    margin-left: 33.33%;
 }
 
 .text-box3 {
-    border: 2px black;
+    border: 0px black;
     height: 200px;
     width: 250px;
 }
