--- a/Index/styles.css
+++ b/Index/styles.css
@@ -12,7 +12,7 @@
     align-items: center;
     height: 100vh;
     width: 50%;
-    margin: 0 auto; 
+    /* margin: 0;  */
     text-align: center;
 }
 
