--- a/help/styles.css
+++ b/help/styles.css
@@ -14,7 +14,7 @@
 }
 
 .box {
-    border: solid 5px purple;
+    border: solid 8px purple;
     height: 500px;
     width: 100%;
 }
@@ -27,8 +27,10 @@
     border: solid 5px purple;
     height: 50px;
     width: 200px;
-    text-align: center;
+    display: flex;
+    justify-content: center;
     align-items: center;
+    text-align: center;
 }
 
 .nav-link {
