--- a/help/styles.css
+++ b/help/styles.css
@@ -1,3 +1,8 @@
+body {
+    color: rgb(170, 170, 0);
+    background-color: black;
+}
+
 .nav {
     display: flex;
     flex-direction: row;
@@ -5,23 +10,33 @@
     align-items: center;
     height: 10vh;
     background-color: purple;
+    font-family: sans-serif;
+    font-size: 20px;
 }
 
 .flexing {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    /* text-align: center; */
+}
+
+.head-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-family: Copperplate, sans-serif;
 }
 
 .box {
     border: solid 8px purple;
-    height: 500px;
-    width: 100%;
 }
 
 .pad {
     padding: 50px;
 }
+
 
 .small-box {
     border: solid 5px purple;
@@ -31,6 +46,11 @@
     justify-content: center;
     align-items: center;
     text-align: center;
+}
+
+
+.spacing {
+    width: 200px;
 }
 
 .nav-link {
@@ -43,6 +63,7 @@
 .content {
     padding: 20px;
     margin-top: 20px;
+    font-family: sans-serif;
 }
 
 
